Woops, changing names of files

--- a/lessons/shell-intro/shell-intro.qmd
+++ b/lessons/shell-intro/shell-intro.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Working in the Unix Shell"
+title: "Introduction to the Unix Shell"
 ---
 
 +------------------------------------------------------+-----------------------------------------------------------------------------------------------------------+
