--- a/lessons/github/github-intro.qmd
+++ b/lessons/github/github-intro.qmd
@@ -12,6 +12,6 @@ git config --global user.email "YOUR_EMAIL_ADDRESS"
 
 ## Exercises
 
- * [Exercise1](exercise1): Practice with `git` on a local repository
- * [Exercise2](exercise2): `git` and GitHub
- * [Exercise3](exercise3): Collaborating in GitHub using the Fork and Pull Model
+ * [Exercise1](exercise1.qmd): Practice with `git` on a local repository
+ * [Exercise2](exercise2.qmd): `git` and GitHub
+ * [Exercise3](exercise3.qmd): Collaborating in GitHub using the Fork and Pull Model
